Filter invalid key usages for key based on key algorithm (#397)